[package]
name = "tracing-rolling-file"
version = "0.1.3"
authors = ["Cavivie <cavivie@gmail.com>"]
edition = "2018"

description = "A rolling file appender with customizable rolling conditions."
homepage = "https://github.com/cavivie/tracing-rolling-file"
documentation = "https://docs.rs/tracing-rolling-file/"
repository = "https://github.com/cavivie/tracing-rolling-file"
keywords = ["rolling", "logging", "tracing"]
categories = ["debugging"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dev-dependencies]
tempfile = "3.0.5"
tracing-appender = "0.2.3"

[dependencies]
chrono = "0.4"
tracing-appender = { version = "0.2.3", optional = true }

[features]
non-blocking = ["dep:tracing-appender"]
